recursion.logo.polygonfractal.PolygonFractal.scala.error
Erreur de compilation :
PolygonFractal:12: error: not enough arguments for method lambda: (levels: Int, sides: Int, length: Double, shrink: Double)Unit.
Unspecified value parameters levels, sides, length, ...
  lambda ()
         ^