recursion.logo.polygonfractal.PolygonFractal.scala.code
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
  def lambda (levels:Int, sides:Int, length:Double, shrink:Double) {
    if (levels > 0) {
      for (i <- 1 to Math.abs (sides)) {
        avance (length)
        lambda (levels - 1, -sides, length * shrink, shrink)
    		right (360 / sides)
      }
    }
    //left (360 / sides)
  }
  lambda ()
  //right (360 / sides)
}